# pii-anon-eval-data

./: .gitignore  CHANGELOG.md  COMPARISON.md  DATASHEET.md  MIGRATION.md  README.md  TAXONOMY.md  pyproject.toml
baselines/: evaluate.py  llm_baseline.py  presidio_baseline.py  regex_baseline.py
baselines/results/: regex_test.json
docs/: PUGH_CHART_ANALYSIS.md  V13_BEHAVIORAL_SIGNALS.md
integrations/: conll_format.py
scripts/: _version.py  enrich.py  enrich_behavioral_signals.py  enrich_context_preservation.py  enrich_llm_sanitized.py  enrich_nested_and_ai_era.py  enrich_pr3.py  export_parquet.py  generate_coverage_fill.py  generate_records.py  generate_subsets.py  generate_v120_records.py  generate_v130_records.py  merge_and_rebuild.py  migrate_v1_to_v2.py  validate.py  validate_v2.py
src/pii_anon_datasets/: __init__.py
src/pii_anon_datasets/benchmarks/: __init__.py
src/pii_anon_datasets/benchmarks/data/: llm_long_context_tracking.metadata.json  llm_pipeline_core.metadata.json  pii_anon_benchmark_v1.metadata.json
src/pii_anon_datasets/data/: pii_anon.metadata.json  pii_anon.schema.json  pii_anon_v2.metadata.json  pii_anon_v2.schema.json
src/pii_anon_datasets/eval_framework/: __init__.py
src/pii_anon_datasets/eval_framework/data/: pii_anon_eval_v1.metadata.json
