[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-anon-datasets"
version = "1.0.0"
description = "Datasets for pii-anon benchmarks and evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "PII Platform Contributors" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/subhash-holla/pii-anon-eval-data"
Repository = "https://github.com/subhash-holla/pii-anon-eval-data"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pii_anon_datasets = [
  "benchmarks/data/*.jsonl.gz",
  "benchmarks/data/*.jsonl",
  "benchmarks/data/*.json",
  "eval_framework/data/*.jsonl.gz",
  "eval_framework/data/*.jsonl",
]
