[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-anon-datasets"
version = "1.2.0"
description = "Comprehensive multilingual benchmark dataset for PII detection and de-identification evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Subhash Holla" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/subhash-holla/pii-anon-eval-data"
Repository = "https://github.com/subhash-holla/pii-anon-eval-data"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pii_anon_datasets = [
  "data/*.jsonl.gz",
  "data/*.json",
  "subsets/**/*.jsonl.gz",
  "splits/*.jsonl.gz",
]
